fixed ireggular bug where post listing shows user's avatar
mask anonymous posts in category/topic views and update API/schema
