# public/openapi/read/categories.yaml
@@ -80,6 +80,9 @@ get:
                                               type: number
                                             timestamp:
                                               type: number
+                                            anonymous:
+                                              type: boolean
+                                              description: Whether this post was created anonymously
                                             content:
                                               type: string
                                             timestampISO:
@@ -140,6 +143,9 @@ get:
                                     type: number
                                   timestamp:
                                     type: number
+                                  anonymous:
+                                    type: boolean
+                                    description: Whether this post was created anonymously
                                   content:
                                     type: string
                                   sourceContent:
